// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CivilityItems should be created 1`] = `
<app-civility-items
  add={[Function EventEmitter]}
  authorization={[Function Object]}
  civilities={[Function Array]}
  delete={[Function EventEmitter]}
  update={[Function EventEmitter]}
>
  <section
    class="bg-white border-left border-right border-bottom rounded"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover"
      >
        <thead>
          <tr>
            <th
              class="align-middle"
              ng-reflect-translate=""
              translate=""
            >
               ABBREVIATION 
            </th>
            <th
              class="align-middle"
              ng-reflect-translate=""
              translate=""
            >
               NAME 
            </th>
            <th
              class="align-middle text-right"
            >
               Actions 
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr
            appcivilityitem=""
            class="item"
            ng-reflect-authorization="[object Object]"
            ng-reflect-civility="[object Object]"
          >
            <td
              class="align-middle"
            >
              testcode1
            </td>
            <td
              class="align-middle"
            >
              <a
                class="h5"
                href="#"
                title="UPDATE_ELEM"
              >
                 testname1 
              </a>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="float-right actions"
              >
                <app-actions-item
                  ng-reflect-with-delete="false"
                  ng-reflect-with-edit="false"
                >
                  <div
                    class="button-validation-action"
                  >
                    
                    
                  </div>
                </app-actions-item>
              </div>
            </td>
          </tr>
          <tr
            appcivilityitem=""
            class="item"
            ng-reflect-authorization="[object Object]"
            ng-reflect-civility="[object Object]"
          >
            <td
              class="align-middle"
            >
              testcode2
            </td>
            <td
              class="align-middle"
            >
              <a
                class="h5"
                href="#"
                title="UPDATE_ELEM"
              >
                 testname2 
              </a>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="float-right actions"
              >
                <app-actions-item
                  ng-reflect-with-delete="false"
                  ng-reflect-with-edit="false"
                >
                  <div
                    class="button-validation-action"
                  >
                    
                    
                  </div>
                </app-actions-item>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</app-civility-items>
`;

exports[`CivilityItems should display add button 1`] = `
<app-civility-items
  add={[Function EventEmitter]}
  authorization={[Function Object]}
  civilities={[Function Array]}
  delete={[Function EventEmitter]}
  update={[Function EventEmitter]}
>
  <section
    class="bg-white border-left border-right border-bottom rounded"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover"
      >
        <thead>
          <tr>
            <th
              class="align-middle"
              ng-reflect-translate=""
              translate=""
            >
               ABBREVIATION 
            </th>
            <th
              class="align-middle"
              ng-reflect-translate=""
              translate=""
            >
               NAME 
            </th>
            <th
              class="align-middle text-right"
            >
               Actions 
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr
            appcivilityitem=""
            class="item"
            ng-reflect-authorization="[object Object]"
            ng-reflect-civility="[object Object]"
          >
            <td
              class="align-middle"
            >
              testcode1
            </td>
            <td
              class="align-middle"
            >
              <a
                class="h5"
                href="#"
                title="UPDATE_ELEM"
              >
                 testname1 
              </a>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="float-right actions"
              >
                <app-actions-item
                  ng-reflect-with-delete="true"
                  ng-reflect-with-edit="true"
                >
                  <div
                    class="button-validation-action"
                  >
                    
                    <button
                      class="btn btn-outline-primary"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,pencil-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-pencil-alt fa-w-16"
                          data-icon="pencil-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                    
                    <button
                      class="btn btn-outline-danger"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,trash-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-trash-alt fa-w-14"
                          data-icon="trash-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 448 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                  </div>
                </app-actions-item>
              </div>
            </td>
          </tr>
          <tr
            appcivilityitem=""
            class="item"
            ng-reflect-authorization="[object Object]"
            ng-reflect-civility="[object Object]"
          >
            <td
              class="align-middle"
            >
              testcode2
            </td>
            <td
              class="align-middle"
            >
              <a
                class="h5"
                href="#"
                title="UPDATE_ELEM"
              >
                 testname2 
              </a>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="float-right actions"
              >
                <app-actions-item
                  ng-reflect-with-delete="true"
                  ng-reflect-with-edit="true"
                >
                  <div
                    class="button-validation-action"
                  >
                    
                    <button
                      class="btn btn-outline-primary"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,pencil-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-pencil-alt fa-w-16"
                          data-icon="pencil-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                    
                    <button
                      class="btn btn-outline-danger"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,trash-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-trash-alt fa-w-14"
                          data-icon="trash-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 448 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                  </div>
                </app-actions-item>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section><app-button-circle-right
    label="+"
    ng-reflect-label="+"
  >
    <div>
      <button
        class="btn-circle btn-xl btn btn-absolute-corner-right btn-success"
        ng-reflect-klass="btn-circle btn-xl btn btn-abso"
        ng-reflect-ng-class="btn-success"
        type="button"
      >
         + 
      </button>
    </div>
  </app-button-circle-right>
</app-civility-items>
`;

exports[`CivilityItems should not display add button 1`] = `
<app-civility-items
  add={[Function EventEmitter]}
  authorization={[Function Object]}
  civilities={[Function Array]}
  delete={[Function EventEmitter]}
  update={[Function EventEmitter]}
>
  <section
    class="bg-white border-left border-right border-bottom rounded"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover"
      >
        <thead>
          <tr>
            <th
              class="align-middle"
              ng-reflect-translate=""
              translate=""
            >
               ABBREVIATION 
            </th>
            <th
              class="align-middle"
              ng-reflect-translate=""
              translate=""
            >
               NAME 
            </th>
            <th
              class="align-middle text-right"
            >
               Actions 
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr
            appcivilityitem=""
            class="item"
            ng-reflect-authorization="[object Object]"
            ng-reflect-civility="[object Object]"
          >
            <td
              class="align-middle"
            >
              testcode1
            </td>
            <td
              class="align-middle"
            >
              <a
                class="h5"
                href="#"
                title="UPDATE_ELEM"
              >
                 testname1 
              </a>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="float-right actions"
              >
                <app-actions-item
                  ng-reflect-with-delete="true"
                  ng-reflect-with-edit="true"
                >
                  <div
                    class="button-validation-action"
                  >
                    
                    <button
                      class="btn btn-outline-primary"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,pencil-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-pencil-alt fa-w-16"
                          data-icon="pencil-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                    
                    <button
                      class="btn btn-outline-danger"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,trash-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-trash-alt fa-w-14"
                          data-icon="trash-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 448 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                  </div>
                </app-actions-item>
              </div>
            </td>
          </tr>
          <tr
            appcivilityitem=""
            class="item"
            ng-reflect-authorization="[object Object]"
            ng-reflect-civility="[object Object]"
          >
            <td
              class="align-middle"
            >
              testcode2
            </td>
            <td
              class="align-middle"
            >
              <a
                class="h5"
                href="#"
                title="UPDATE_ELEM"
              >
                 testname2 
              </a>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="float-right actions"
              >
                <app-actions-item
                  ng-reflect-with-delete="true"
                  ng-reflect-with-edit="true"
                >
                  <div
                    class="button-validation-action"
                  >
                    
                    <button
                      class="btn btn-outline-primary"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,pencil-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-pencil-alt fa-w-16"
                          data-icon="pencil-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 512 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                    
                    <button
                      class="btn btn-outline-danger"
                      type="button"
                    >
                      <fa-icon
                        class="ng-fa-icon"
                        ng-reflect-icon-prop="fas,trash-alt"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-trash-alt fa-w-14"
                          data-icon="trash-alt"
                          data-prefix="fas"
                          focusable="false"
                          role="img"
                          viewBox="0 0 448 512"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                            fill="currentColor"
                          />
                        </svg>
                      </fa-icon>
                    </button>
                  </div>
                </app-actions-item>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</app-civility-items>
`;
